syntax = "proto3";

package lbproto;

option go_package = "q1/protofiles";

service BackendService {
    rpc BackendRPC (BackendRequest) returns (BackendResponse);
}

service LoadBalancingService {
    rpc LoadBalancerRPC (LoadBalancerRequest) returns (LoadBalancerResponse);
}

service ReportLoadService {
    rpc ReportLoadRPC (LoadStatus) returns (Empty);
}

message LoadStatus {
    string serverAddr = 1;
    float load = 2;
}

message Empty {}

message BackendRequest {
    int32 taskType = 1;
    int64 num = 2;
}

message BackendResponse {
    int64 output = 1;
}

message LoadBalancerRequest {
    int32 taskType = 1;
}

message LoadBalancerResponse {
    string bestServer = 1;
}

